@@ -4,6 +4,7 @@
 
 === 1.0.30 ===
 * Implemented ADSREnvelope class for ADSR envelope computation.
+* Added MacOS CI builds.
 
 === 1.0.29 ===
 * Optimized complex resampling algorithm for dspu::Sample.
